manifests/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dev
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 1
  template:
    metadata:
      name: app
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: "ghcr.io/ashfordhastings/backend:latest"
          ports: 
          - containerPort: 5000
---
apiVersion: v1 
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP 
  selector: 
    app: backend
  ports: 
    - port: 5000
      targetPort: 5000
